[gd_scene load_steps=36 format=3 uid="uid://betb06ngrinvn"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_6np82"]
[ext_resource type="Texture2D" uid="uid://cvt36nbwfmbew" path="res://images/player/dhqkxa1-10667048-d3de-4f74-8d8e-26be09c4951a.png" id="2_kmjc2"]
[ext_resource type="Resource" uid="uid://gkvq3i4fj28" path="res://inventory/inventory.tres" id="2_tbg4v"]
[ext_resource type="PackedScene" uid="uid://c0sxfi7pnr4dw" path="res://inventory/inventory_interface.tscn" id="4_syv87"]
[ext_resource type="Texture2D" uid="uid://dqw4d0hkl77pg" path="res://images/weapons/Recurve_01_resized2.png" id="5_52ytk"]
[ext_resource type="PackedScene" uid="uid://bwosuopt8suwj" path="res://Crafting/craft_ui.tscn" id="6_gexv2"]
[ext_resource type="Texture2D" uid="uid://n5doukrky3xj" path="res://images/weapons/Slash/Arcing.png" id="7_xiuk2"]
[ext_resource type="Texture2D" uid="uid://chak72sofi64i" path="res://images/weapons/Slash/Slash.png" id="8_qo4rj"]
[ext_resource type="Texture2D" uid="uid://ck1ysjt8gorr3" path="res://images/weapons/Slash/Slash symmetrical.png" id="9_qkcge"]
[ext_resource type="Texture2D" uid="uid://ctjkxpkjehuy4" path="res://images/weapons/Slash/Circular.png" id="10_kram0"]
[ext_resource type="Script" path="res://scenes/sword.gd" id="14_dxotf"]
[ext_resource type="Texture2D" uid="uid://b0306byljhg8l" path="res://images/weapons/Scimitar_Silver.png" id="15_dahbg"]
[ext_resource type="PackedScene" path="res://healthbar/healthbar.tscn" id="16_5uyjw"]
[ext_resource type="PackedScene" uid="uid://de6jxdilme3xa" path="res://scenes/death_screen.tscn" id="17_v86r2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y5rk1"]
atlas = ExtResource("2_kmjc2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_epiby"]
atlas = ExtResource("2_kmjc2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykr0m"]
atlas = ExtResource("2_kmjc2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhpkh"]
atlas = ExtResource("2_kmjc2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdeam"]
atlas = ExtResource("2_kmjc2")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgp0t"]
atlas = ExtResource("2_kmjc2")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_65lc3"]
atlas = ExtResource("2_kmjc2")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xje5k"]
atlas = ExtResource("2_kmjc2")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qirn8"]
atlas = ExtResource("2_kmjc2")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2d1ch"]
atlas = ExtResource("2_kmjc2")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrifa"]
atlas = ExtResource("2_kmjc2")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j44t3"]
atlas = ExtResource("2_kmjc2")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pno4"]
atlas = ExtResource("2_kmjc2")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubnv1"]
atlas = ExtResource("2_kmjc2")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lpby"]
atlas = ExtResource("2_kmjc2")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2sw7"]
atlas = ExtResource("2_kmjc2")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_doiah"]
atlas = ExtResource("2_kmjc2")
region = Rect2(192, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_fokd8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5rk1")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_epiby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykr0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhpkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdeam")
}],
"loop": true,
"name": &"walk-down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgp0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65lc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xje5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qirn8")
}],
"loop": true,
"name": &"walk-left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2d1ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrifa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j44t3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pno4")
}],
"loop": true,
"name": &"walk-right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubnv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lpby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2sw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doiah")
}],
"loop": true,
"name": &"walk-up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h6bdf"]
size = Vector2(24, 30.5)

[sub_resource type="SpriteFrames" id="SpriteFrames_5vpw4"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": ExtResource("7_xiuk2")
}, {
"duration": 1.0,
"texture": ExtResource("10_kram0")
}, {
"duration": 1.0,
"texture": ExtResource("9_qkcge")
}, {
"duration": 1.0,
"texture": ExtResource("8_qo4rj")
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_snxjl"]
size = Vector2(85, 60)

[node name="Player" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_6np82")
inventory = ExtResource("2_tbg4v")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fokd8")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 9.25)
shape = SubResource("RectangleShape2D_h6bdf")

[node name="Inventory" parent="." instance=ExtResource("4_syv87")]
visible = false
z_index = 3
offset_left = -161.0
offset_top = -256.0
offset_right = 196.0
offset_bottom = 4.0
scale = Vector2(0.9, 0.9)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(22, 2)

[node name="Bow" type="Sprite2D" parent="."]
visible = false
position = Vector2(25, 5)
rotation = -0.523599
scale = Vector2(0.15, 0.167)
texture = ExtResource("5_52ytk")

[node name="Craft_UI" parent="." instance=ExtResource("6_gexv2")]
visible = false
light_mask = 3
visibility_layer = 3
z_index = 3
offset_left = -152.0
offset_top = -236.0
offset_right = -112.0
offset_bottom = -196.0
scale = Vector2(8.5, 5.049)

[node name="Slash" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(45, 7.5)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_5vpw4")
frame = 2

[node name="Sword" type="Area2D" parent="."]
visible = false
script = ExtResource("14_dxotf")

[node name="SwordSprite" type="Sprite2D" parent="Sword"]
position = Vector2(25, 5)
scale = Vector2(0.45, 0.45)
texture = ExtResource("15_dahbg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword"]
position = Vector2(36.5, 4)
scale = Vector2(0.6, 0.6)
shape = SubResource("RectangleShape2D_snxjl")

[node name="Healthbar" parent="." instance=ExtResource("16_5uyjw")]
offset_left = -48.0
offset_top = 28.0
offset_right = 192.0
offset_bottom = 55.0
scale = Vector2(0.400961, 0.351835)

[node name="Death Screen" parent="." instance=ExtResource("17_v86r2")]
visible = false
z_index = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -418.0
offset_top = -148.0
offset_right = -418.0
offset_bottom = -148.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.66, 0.66)

[connection signal="animation_finished" from="Slash" to="." method="_on_slash_animation_finished"]
[connection signal="body_entered" from="Sword" to="." method="_on_sword_body_entered"]
[connection signal="body_exited" from="Sword" to="." method="_on_sword_body_exited"]
